# guided_local_intelligence

./: .env  .env.example  .gitignore  CHANGELOG.md  CLARIFICATION_INDEX.md  CLARIFICATION_QUICK_START.md  CLARIFICATION_README.md  CODE_CHANGES_DETAIL.md  CONTRIBUTING.md  Cargo.toml  EVALUATION.md  IDEA.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Modelfile  README.md  SAFETY_CAP_FIX_SUMMARY.md  agent.md  future-feature.md  mcp_servers.toml  pyproject.toml  sessions.json
Reports/: 20260313_200113_how_to_run_this_project.md  20260315_142923_explain_what_a_progressive_guidance_loop.md
adp/: __init__.py  agent_graph.py  config.py  main.py  writer.py
adp_output/: main.py
bitkum/: quantization.txt
docs/: API.md  ARCHITECTURE.md  MIGRATION.md  Project_format_Updated.docx  QUICK_REFERENCE.md  README.md  TESTING.md  literature_review_table.ods  report.odt  synopsis.odt
output/: .adp_execution_log.md  adp_run_20260409_000637_e8f994fa.json
readme/: AGENT_IMPLEMENTATION_PLAN.md  AGENT_UPGRADE_INSTRUCTIONS.md  CLARIFICATION_ARCHITECTURE.md  CLARIFICATION_CHANGES.md  CLARIFICATION_EXAMPLES.md  CLARIFICATION_STAGE.md  CODE_FIXES_COMPARISON.md  ERROR_FIX_COMPLETE.md  FIX_SAFETY_CAP_ERROR.md  PROJECT_ARCHITECTURE.md  START_HERE.md  TASKS.md  guided_local_intelligence_project_spec.md
scripts/: benchmark_model.sh  check_ollama_tools.sh
src/: agents.rs  config.rs  context_summarizer.rs  guidance_engine.rs  main.rs  task_requirements.rs  tools.rs
tests/: test_agent_graph.py  test_assembler.py  test_clarifier.py  test_decomposer.py  test_evaluation.py  test_executor.py  test_executor_mcp.py  (+17 more)
(+57 files in other folders)
