[package]
name = "guided_local_intelligence"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gli"
path = "src/main.rs"

[dependencies]
# Local agent orchestration framework
agent_b = { path = "../Agent-B", package = "Agent-B" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal colors
colored = "2"

# Streaming support
futures = "0.3"

# Date/time for report filenames
chrono = { version = "0.4", features = ["serde"] }

# Synchronous HTTP client for web search tool
ureq = { version = "2", features = ["json"] }
